12th YAML + 14th BACKEND + 3rd FRONTEND
YAML: Added searchUser function + some format fix
BACKEND: Added searchUser function + some comments
FRONTEND: Added axios functions
